Fix: Phone Numbers: mind the gap
The edit buttons in the Phone Number screen were too close to the iPhone "home swipe bar".

--- a/www/css/index.css
+++ b/www/css/index.css
@@ -64,6 +64,10 @@ body {
      */
     overscroll-behavior: none;
 
+    /* Mind the gap */
+    padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
+    padding-top: env(safe-area-inset-top); /* iOS 11.2 */
+
 }
 
 
@@ -85,19 +89,6 @@ body.hasDarkMode {
      }
  }
  
-/* Mind the iPhone X gap */
-@media screen and (orientation: portrait) {
-    body {
-        padding-top: constant(safe-area-inset-top); /* iOS 11.0 */
-        padding-top: env(safe-area-inset-top); /* iOS 11.2 */
-    }
-}
-
-@media screen and (orientation: landscape) {
-    body {
-        padding-top: 0;
-    }
-}
 
 .page {
     /* Make the page *look* like a page */
